@@ -26,6 +26,7 @@ Release 0.9.7
   container of static methods to make it easier to extend
 - zm_wordpress: allow to disable URL rewriting; this allows to display any WP
   content in store pages while linking back to the actual blog
+- zm_firephp: upgrade to FirePHP 0.3.1
 
 Release 0.9.6
 - add sanitize parameter to ZMRequest::getParameterMap()
